Eevee does not render alpha when DOF is turned on #57042

Closed
opened 2018-10-03 13:54:30 +02:00 by pratik solanki · 5 comments

System Information
ubuntu 16.4

Blender Version
blender 2.8 9596dfc26af

Short description of error
Eevee does not render alpha when DOF is turned on

Exact steps for others to reproduce the error
check the attached blend file , turn on DOF in rendersettings and press f12 , render will not have alpha
now turn off DOF in rendersettings and press f12 , render image will have alpha

test dof.blend

**System Information** ubuntu 16.4 **Blender Version** blender 2.8 9596dfc26af **Short description of error** Eevee does not render alpha when DOF is turned on **Exact steps for others to reproduce the error** check the attached blend file , turn on DOF in rendersettings and press f12 , render will not have alpha now turn off DOF in rendersettings and press f12 , render image will have alpha [test dof.blend](https://archive.blender.org/developer/F4919900/test_dof.blend)
Author

Added subscriber: @pratiksolanki

Added subscriber: @pratiksolanki

#57166 was marked as duplicate of this issue

#57166 was marked as duplicate of this issue
Clément Foucault was assigned by Brecht Van Lommel 2018-10-04 14:28:10 +02:00

Added subscriber: @AdamEarle

Added subscriber: @AdamEarle

This issue was referenced by 9ecf68e8ae

This issue was referenced by 9ecf68e8ae060c8d46a809ca3e6aacf399f23033

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57042
No description provided.